# Simple-IoTwin

./: .gitignore  CMakeLists.txt  Doxyfile.in  Readme.md  linter.cfg
.github/workflows/: cmake_ci.yml  cmake_coverage.yml
docs/: .gitignore  CMakeLists.txt  Doxyfile.in
docs/src/: index.dox
src/libs/: CMakeLists.txt
src/libs/IoTwin/: Iotwin.cpp  Iotwin.h
src/sketches/: CMakeLists.txt  avr.cmake  samd.cmake
src/sketches/simpleDisplay/: simple_sketch.ino
src/tests/: CMakeLists.txt
src/tests/IoTwin/: IoTwinTest.cpp
utils/: CMakeLists.txt  board_finder.py  coverage.py
